# libsmp

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  NEWS.md  README.md  library.properties  meson.build  meson_options.txt
docs/: Doxyfile.in  avr-port.rst  conf.py.in  genindex.rst  index.rst  installation.rst  meson.build  message-protocol.txt  serial-protocol.txt  static-api.rst
docs/_static/: theme_overrides.css
docs/api/: buffer.rst  context.rst  error.rst  message.rst  serial-protocol.rst
docs/protocols/: message-protocol.rst  serial-protocol.rst
extras/: linux-avr-atmega2560-cross.txt
include/: config.h  libsmp-static.h  libsmp.h
scripts/: export-arduino-lib.py
src/: buffer.c  buffer.h  context.c  context.h  libsmp-private-avr.h  libsmp-private-posix.h  libsmp-private.h  libsmp-static.h.in  libsmp.c  message.c  serial-device-arduino.cpp  serial-device-asf-sam3x.c  serial-device-avr.c  serial-device-esp32-bt-spp.c  serial-device-posix.c  serial-device-stubs.c  serial-device-win32.c  serial-device.h  serial-protocol.c  serial-protocol.h  serial_frame.c
tests/: context.c  main.c  meson.build  message.c  serial-protocol.c  serial_frame.c  tests.h
